--- a/app/views/user/product/buy.html
+++ b/app/views/user/product/buy.html
@@ -116,6 +116,7 @@
 									  <input name="extra1" type="hidden" value="">
 									  <input name="extra2" type="hidden" value="">
 									  <input name="confirmationUrl" type="hidden" value="{{payu.confirmation}}">
+									  <input name="responseUrl" type="hidden" value="{{payu.response}}">
 									  <input class="btn-pay" type="image" src="http://www.payulatam.com/img-secure-2015/boton_pagar_pequeno.png" border="0">
 									</form>
 								</div>
