--- a/app/views/pages/featured.html
+++ b/app/views/pages/featured.html
@@ -20,7 +20,7 @@
 						</a>
 					</div>
 					<div class="featured-w280">
-						<a href="/user/GrolschPeru/">
+						<a href="/user/GrolschPeru/products/all/page-1/?order=price_asc&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Grolsch-tienda_s7dshb">
 						</a>
 					</div>
@@ -34,19 +34,19 @@
 						</a>
 					</div>
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/galaxy-case/page-1/?order=newest&featured=1">
+						<a href="/products/category/galaxy-cases/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/galaxy-cases_qroa3a.jpg">
 						</a>
 					</div>
 				</div>
 				<div class="featured-c580">
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/taza/page-1/?order=newest&featured=1">
+						<a href="/products/category/tazas/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/tazas-mug_czzzfx.jpg">
 						</a>
 					</div>
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/print/page-1/?order=newest&featured=1">
+						<a href="/products/category/prints/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/productos-categorias-prints_edijjg">
 						</a>
 					</div>
