--- a/app/styles/featured.styl
+++ b/app/styles/featured.styl
@@ -11,7 +11,7 @@
 			border 1px solid #ddd
 			box-sizing border-box
 	&-w580
-		flex 1
+		flex 1 1 350px
 		border 10px solid white
 		min-width 350px
 		img
@@ -23,7 +23,7 @@
 		a:hover
 			filter brightness(80%)
 	&-w280
-		flex 1
+		flex 1 1 auto
 		border 10px solid white
 		img
 			width 100%
@@ -34,7 +34,7 @@
 		a:hover
 			filter brightness(80%)
 	&-c580
-		flex 1
+		flex 1 1 370px
 		display flex
 		min-width 370px
 		justify-content space-between
