hover on product images

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1115,6 +1115,7 @@ white = #fff
 		background-position center center
 		height: 250px;
 		display flex
+		position relative
 		img
 			margin auto
 	&-data
