--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -180,7 +180,7 @@ drift.load('dybbbnh3wb9u');
 			{% endif %}
 				<tr>
 					<td></td>
-					<td><a href="/tv">TV</a></td>
+					<td><a href="/products/category/all/page-1/?order=newest&featured=1">MARKET</a></td>
 				</tr>
 				<tr>
 					<td></td>
@@ -194,13 +194,13 @@ drift.load('dybbbnh3wb9u');
 					<td></td>
 					<td><a href="/collections/category/all/page-1">COLECCIONES</a></td>
 				</tr>
-				<!-- <tr>
-					<td></td>
-					<td><a href="/products/category/all/page-1">TIENDA</a></td>
-				</tr> -->
 				<tr>
 					<td></td>
 					<td><a href="/blog">BLOG</a></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td><a href="/tv">TV</a></td>
 				</tr>
 			{% if user %}
 				<tr>
