add footer links

--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -17,28 +17,28 @@
 					<div class="footer-links">
 						<table class="am-Footer-list">
 						  <tr>
-						    <td class="am-Footer-title-text">HOME</td>
-						    <td class="am-Footer-item-text">Sobre AM</td>
+						    <a href="/featured"><td class="am-Footer-title-text">HOME</td>
+						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/204193947-SOBRE-ARTE-MANIFIESTO"><td class="am-Footer-item-text">Sobre AM</td></a>
 						  </tr>
 						  <tr>
-						    <td class="am-Footer-title-text">DESCUBRE</td>
-						    <td class="am-Footer-item-text">Contacto</td>
+						    <a href="/works/category/all/page-1/?order=newest&featured=1"><td class="am-Footer-title-text">DESCUBRE</td>
+						    <a class="drift-open-chat"><td class="am-Footer-item-text">Contacto</td></a>
 						  </tr>
 						  <tr>
-						    <td class="am-Footer-title-text">MARKET</td>
-						    <td class="am-Footer-item-text">Términos de servicio</td>
+						    <a href="/products/category/all/page-1/?order=newest&featured=1"><td class="am-Footer-title-text">MARKET</td></a>
+						    <a href="https://artemanifiesto.zendesk.com/hc/es/articles/219437587-ACUERDO-DE-SERVICIOS-AM"><td class="am-Footer-item-text">Términos de servicio</td></a>
 						  </tr>
 						  <tr>
-						    <td class="am-Footer-title-text">ARTISTAS</td>
-						    <td class="am-Footer-item-text">Políticas de privacidad</td>
+						    <a href="/users/specialty/all/page-1/?order=newest&featured=1"><td class="am-Footer-title-text">ARTISTAS</td></a>
+						    <a href="https://artemanifiesto.zendesk.com/hc/es/articles/219407927-PRIVACIDAD-Y-CONFIDENCIALIDAD"><td class="am-Footer-item-text">Políticas de privacidad</td></a>
 						  </tr>
 						  <tr>
-						    <td class="am-Footer-title-text">COLECCIÓN</td>
-						    <td class="am-Footer-item-text">Cómo comprar</td>
+						    <a href="/collections/category/all/page-1?order=newest&featured=1"><td class="am-Footer-title-text">COLECCIÓN</td></a>
+						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/207497327-COMO-COMPRAR-"><td class="am-Footer-item-text">Cómo comprar</td></a>
 						  </tr>
 						  <tr>
-						    <td class="am-Footer-title-text" style="padding-bottom: 0;">AYUDA</td>
-						    <td class="am-Footer-item-text" style="padding-bottom: 0;">Cómo vender</td>
+						    <a href="https://artemanifiesto.zendesk.com/hc/es"><td class="am-Footer-title-text" style="padding-bottom: 0;">AYUDA</td></a>
+						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/204234628-ACUERDOS-CON-ARTISTA"><td class="am-Footer-item-text" style="padding-bottom: 0;">Cómo vender</td></a>
 						  </tr>
 						</table>
 					</div>
