fix footer links

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1449,6 +1449,8 @@ white = #fff
 	.social
 		font-size 1em
 		padding-right 10px !important
+	a
+		color #fff
 
 .am-Copy-text
 	color rgba(white, .42)
@@ -5656,8 +5658,8 @@ white = #fff
 
 #back-to-top
 	position: fixed;
-	bottom: 80px;
-	right: 40px;
+	bottom: 110px;
+	right: 42px;
 	z-index: 1;
 	width: 42px;
 	height: 42px;
