--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -17,28 +17,28 @@
 					<div class="footer-links">
 						<table class="am-Footer-list">
 						  <tr>
-						    <a href="/featured"><td class="am-Footer-title-text">HOME</td>
-						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/204193947-SOBRE-ARTE-MANIFIESTO"><td class="am-Footer-item-text">Sobre AM</td></a>
+						    <td class="am-Footer-title-text"><a href="/featured">HOME</a></td>
+						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/sections/204193947-SOBRE-ARTE-MANIFIESTO">Sobre AM</a></td>
 						  </tr>
 						  <tr>
-						    <a href="/works/category/all/page-1/?order=newest&featured=1"><td class="am-Footer-title-text">DESCUBRE</td>
-						    <a class="drift-open-chat"><td class="am-Footer-item-text">Contacto</td></a>
+						    <td class="am-Footer-title-text"><a href="/works/category/all/page-1/?order=newest&featured=1">DESCUBRE</a></td>
+						    <td class="am-Footer-item-text"><a class="drift-open-chat" href="#">Contacto</a></td>
 						  </tr>
 						  <tr>
-						    <a href="/products/category/all/page-1/?order=newest&featured=1"><td class="am-Footer-title-text">MARKET</td></a>
-						    <a href="https://artemanifiesto.zendesk.com/hc/es/articles/219437587-ACUERDO-DE-SERVICIOS-AM"><td class="am-Footer-item-text">Términos de servicio</td></a>
+						    <td class="am-Footer-title-text"><a href="/products/category/all/page-1/?order=newest&featured=1">MARKET</a></td>
+						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/articles/219437587-ACUERDO-DE-SERVICIOS-AM">Términos de servicio</a></td>
 						  </tr>
 						  <tr>
-						    <a href="/users/specialty/all/page-1/?order=newest&featured=1"><td class="am-Footer-title-text">ARTISTAS</td></a>
-						    <a href="https://artemanifiesto.zendesk.com/hc/es/articles/219407927-PRIVACIDAD-Y-CONFIDENCIALIDAD"><td class="am-Footer-item-text">Políticas de privacidad</td></a>
+						    <td class="am-Footer-title-text"><a href="/users/specialty/all/page-1/?order=newest&featured=1">ARTISTAS</a></td>
+						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/articles/219407927-PRIVACIDAD-Y-CONFIDENCIALIDAD">Políticas de privacidad</a></td>
 						  </tr>
 						  <tr>
-						    <a href="/collections/category/all/page-1?order=newest&featured=1"><td class="am-Footer-title-text">COLECCIÓN</td></a>
-						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/207497327-COMO-COMPRAR-"><td class="am-Footer-item-text">Cómo comprar</td></a>
+						    <td class="am-Footer-title-text"><a href="/collections/category/all/page-1?order=newest&featured=1">COLECCIÓN</a></td>
+						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/sections/207497327-COMO-COMPRAR-">Cómo comprar</a></td>
 						  </tr>
 						  <tr>
-						    <a href="https://artemanifiesto.zendesk.com/hc/es"><td class="am-Footer-title-text" style="padding-bottom: 0;">AYUDA</td></a>
-						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/204234628-ACUERDOS-CON-ARTISTA"><td class="am-Footer-item-text" style="padding-bottom: 0;">Cómo vender</td></a>
+						    <td class="am-Footer-title-text" style="padding-bottom: 0;"><a href="https://artemanifiesto.zendesk.com/hc/es">AYUDA</a></td>
+						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/204234628-ACUERDOS-CON-ARTISTA"><td class="am-Footer-item-text" style="padding-bottom: 0;"><a href="https://artemanifiesto.zendesk.com/hc/es/sections/204234628-ACUERDOS-CON-ARTISTA">Cómo vender</a></td>
 						  </tr>
 						</table>
 					</div>
