add order list to report

--- a/app/views/partials/report.html
+++ b/app/views/partials/report.html
@@ -37,6 +37,7 @@
             <li><a href="/report/works/page-1">Colecciones</a></li>
             <li><a href="/report/products/page-1">Productos</a></li>
             <li><a href="/report/products_applying/page-1">Productos en revisión</a></li>
+            <li><a href="/report/orders/page-1">Orders</a></li>
             <li><a href="/report/blog/page-1">Blog</a></li>
             <li><a href="/report/brands/page-1">Marcas</a></li>
             <li><a href="/report/banners">Banners</a></li>
