--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -57,6 +57,8 @@
 		font-weight 100
 		font-size 18px
 		color #666
+	a
+		color #333
 
 .am-collection-text
 	font-family: 'Montserrat',sans-serif;
