--- a/app/views/partials/account-menu.html
+++ b/app/views/partials/account-menu.html
@@ -14,7 +14,7 @@
 						</ul>
 					</div>
 					
-					<!-- {% if user.country === 'Peru'%}
+					{% if user.country === 'Peru'%}
 						<div class="am-Filter-item">
 							<header class="am-Filter-header">
 								<i class="bi_user-single-a"></i><p>Tienda en línea</p>
@@ -30,6 +30,6 @@
 								{%endif%}
 							</ul>
 						</div>
-					{% endif %} -->
+					{% endif %}
 					 
 				</div>
