--- a/app/views/partials/elements/product.html
+++ b/app/views/partials/elements/product.html
@@ -46,7 +46,7 @@
           <div class="product-card-title"><%= name %></div>
           <div class="product-card-subtitle"><%= Category.name %></div>
 
-          <div class="product-card-subtitle">por <%= User.fullname %></div>
+          <div class="product-card-subtitle">por <%= User.username %></div>
           <div class="product-card-price">
             <span class="final">S/.<%= finalPrice %>.00</span>&nbsp;&nbsp;
             <span class="original">S/.<%= price %>.00</span>
