--- a/app/views/user/product/add.html
+++ b/app/views/user/product/add.html
@@ -100,7 +100,6 @@
 	  			</div>
 	  			<div class="work-collection-card-data">
 	  				<p class="work-collection-card-title work-name-published"></p>
-	  				<p class="work-collection-card-artist work-user-published"></p>
 	  			</div>
 	  		</div>
 	  		<div class="separator u-margin-top-20">
@@ -111,14 +110,9 @@
 	  		<div class="grid-50">
 	        <a class='work-view'>
 	          <button class="button inline upload u-margin-top-30 upload_button">
-	            <i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER PRODUCTO
+	            <i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;REVISAR PRODUCTO
 	          </button>
 	        </a>
-	  		</div>
-	  		<div class="grid-50">
-	  			<a class="work-edit">
-	          <button class="button inline upload u-margin-top-30 upload_button"><i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA</button>
-	  			</a>
 	  		</div>
 	  		<div class="grid-50">
 	  			<a class='work-new'>
