--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -121,23 +121,25 @@
 					<div class="singleProduct-selects u-padding-bottom-30">
 						<label class="singleProduct-label">
 							<select class="singleProduct-select" name='model'>
-								{% for productCategory in categories %}
-									{% if productCategory.CategoryId == product.CategoryId %}
-										<option disabled selected value="/user/{{productCategory.User.username}}/product/{{productCategory.nameSlugify}}">{{productCategory.Category.name}}</option>
-									{% else %}
-										{% if productCategory.Category.ParentCategoryId == product.Category.ParentCategoryId%}
-											<option value="/user/{{productCategory.User.username}}/product/{{productCategory.nameSlugify}}">{{productCategory.Category.name}}</option>
+								{% if product.CategoryId == 87 ||  product.CategoryId == 88 %}
+									<option selected value="1">S</option>
+									<option value="2">M</option>
+									<option value="3">L</option>
+									<option value="4">XL</option>
+								{% else %}
+									{% for productCategory in categories %}
+										{% if productCategory.CategoryId == product.CategoryId %}
+											<option disabled selected value="/user/{{productCategory.User.username}}/product/{{productCategory.nameSlugify}}">{{productCategory.Category.name}}</option>
+										{% else %}
+											{% if productCategory.Category.ParentCategoryId == product.Category.ParentCategoryId%}
+												<option value="/user/{{productCategory.User.username}}/product/{{productCategory.nameSlugify}}">{{productCategory.Category.name}}</option>
+											{%endif%}
 										{%endif%}
-									{%endif%}
-								{% endfor %}
+									{% endfor %}
+								{%endif%}
 							</select>
 						</label>
 
-						<!-- <select class="singleProduct-select">
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
-						</select>	 -->
 					</div>
 					
 
