--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -290,7 +290,7 @@
 					</p>
 
 					<p class="singleProduct-info-text">
-						Diseño por: <a href="/user/{{product.User.username}}/products/all/page-1/?order=price_asc&featured=1">
+						Tienda de: <a href="/user/{{product.User.username}}/products/all/page-1/?order=price_asc&featured=1">
 										{% if product.User.typeName === 1 %}
 											{{product.User.fullname}}
 										{% else %}
