update featured page

--- a/app/views/pages/featured.html
+++ b/app/views/pages/featured.html
@@ -9,19 +9,19 @@
 				<div class="featured-c580">
 					<div class="featured-w580">
 						<a href="/products/category/all/page-1/?order=newest&featured=1">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Banner-principal_hz3vur.jpg">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/am-market.jpg">
 						</a>
 					</div>
 				</div>
 				<div class="featured-c580">
 					<div class="featured-w280">
-						<a href="/user/cristhianhova/products/all/page-1/?order=price_asc&featured=1">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Hova-tienda_cdsqff">
+						<a href="/user/andreabarreda/products/all/page-1/?order=price_asc&featured=1">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/tienda-destacada.jpg">
 						</a>
 					</div>
 					<div class="featured-w280">
-						<a href="/user/GrolschPeru/products/all/page-1/?order=price_asc&featured=1">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/Grolsch-tienda_s7dshb">
+						<a href="https://artjam.typeform.com/to/CDXmZM">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/artjam-convocatoria.jpg">
 						</a>
 					</div>
 				</div>
@@ -30,24 +30,24 @@
 				<div class="featured-c580">
 					<div class="featured-w280 featured-border">
 						<a href="/products/category/iphone-case/page-1/?order=newest&featured=1">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/iphone-cases_kvoptr.jpg">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/iphone.jpg">
 						</a>
 					</div>
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/galaxy-cases/page-1/?order=newest&featured=1">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/galaxy-cases_qroa3a.jpg">
+						<a href="/products/category/ropa/page-1/?order=newest&featured=1">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/polos.jpg">
 						</a>
 					</div>
 				</div>
 				<div class="featured-c580">
 					<div class="featured-w280 featured-border">
 						<a href="/products/category/tazas/page-1/?order=newest&featured=1">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/tazas-mug_czzzfx.jpg">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/tazas.jpg">
 						</a>
 					</div>
 					<div class="featured-w280 featured-border">
 						<a href="/products/category/prints/page-1/?order=newest&featured=1">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/productos-categorias-prints_edijjg">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/print.jpg">
 						</a>
 					</div>
 				</div>
@@ -55,12 +55,12 @@
 			<div class="featured-flex">
 				<div class="featured-w580">
 					<a href="/works/category/all/page-1/?order=newest&featured=1">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255848/featured/descubre-obras_og6zir.jpg">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255848/featured/DESCUBRE-OBRAS.jpg">
 					</a>
 				</div>
 				<div class="featured-w580">
-					<a href="/user/sipion/">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/artista-destacado_sajfxk.jpg">
+					<a href="/blog/post/el-surrealismo-de-jhoel-mamani-20117115540">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/ARTISTA-DESTACADO.jpg">
 					</a>
 				</div>
 			</div>
@@ -78,8 +78,8 @@
 			</div>
 			<div class="featured-flex">
 				<div class="featured-w580">
-					<a href="/tv">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/AM-TV_qswkkr.jpg">
+					<a href="/blog/post/am-workshops-100217030745">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/am-workshops.jpg">
 					</a>
 				</div>
 				<div class="featured-w580">
