--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -10,6 +10,8 @@
 
 {% include '../partials/banner.html' %}
 
+<a href="#" id="back-to-top" title="Back to top"><i class="fa fa-chevron-up"></i></a>
+
 <div style="max-width: 1500px; margin: auto; overflow: hidden">
 
 	<div class="grid-container u-padding-top-20">
