change default sorting of discover products

--- a/app/views/pages/featured.html
+++ b/app/views/pages/featured.html
@@ -8,7 +8,7 @@
 			<div class="featured-flex">
 				<div class="featured-c580">
 					<div class="featured-w580">
-						<a href="/products/category/all/page-1/?order=newest&featured=1">
+						<a href="/products/category/all/page-1/?order=popularity&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/am-market.jpg">
 						</a>
 					</div>
