--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -32,7 +32,7 @@
 				              {% if user %}
 				                <a href="/feed" class="feed-menu">INICIO<span></span></a>
 				              {% endif %}
-				              	<a href="/products/category/all/page-1/?order=newest&featured=1" class="market-menu">MARKET<span></span></a>
+				              	<a href="/products/category/all/page-1/?order=popularity&featured=1" class="market-menu">MARKET<span></span></a>
 								<a class="works-menu js-menu-discover">DESCUBRE<span></span></a>
 								<!-- <a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a> -->
 								<!-- <a href="/products/category/all/page-1" class="market-menu">TIENDA<span></span></a> -->
