updated style to header menu

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -632,9 +632,15 @@ white = #fff
 
 	.options
 		font-family 'Montserrat', sans-serif
-		font-weight bold
+		font-weight lighter
 		font-size 13px
 		letter-spacing 1px
+		sup
+			font-size 7px
+			color #4400ff
+			vertical-align super
+		a:hover span
+			display block
 		a
 			color charcoal-grey
 			margin-left 20px
@@ -644,7 +650,7 @@ white = #fff
 				background black
 				position absolute
 				height 3px
-				width 40px
+				width 100%
 				bottom -10px
 				left 50%
 				transform translate(-50%, 0)
@@ -2030,7 +2036,7 @@ white = #fff
 	// background rgba(black, .59)
 	height 800px
 	padding 100px 20px
-	background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/background.jpg');
+	background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1488585503/general/00-FONDO-AM.jpg');
 	background-size: cover;
 	background-position: center center;
 	position relative
