--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -18,7 +18,7 @@
 						<table class="am-Footer-list">
 						  <tr>
 						    <td class="am-Footer-title-text"><a href="/featured">HOME</a></td>
-						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/sections/204193947-SOBRE-ARTE-MANIFIESTO">Sobre AM</a></td>
+						    <td class="am-Footer-item-text"><a href="/compra-y-vende-arte-en-internet-latinoamerica">Sobre AM</a></td>
 						  </tr>
 						  <tr>
 						    <td class="am-Footer-title-text"><a href="/works/category/all/page-1/?order=newest&featured=1">DESCUBRE</a></td>
