Fix responsive menu and update footer

--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -22,23 +22,23 @@
 						  </tr>
 						  <tr>
 						    <td class="am-Footer-title-text"><a href="/works/category/all/page-1/?order=newest&featured=1">DESCUBRE</a></td>
-						    <td class="am-Footer-item-text"><a class="drift-open-chat" href="#">Contacto</a></td>
+						    <td class="am-Footer-item-text"><a href="#">Contacto</a></td>
 						  </tr>
 						  <tr>
 						    <td class="am-Footer-title-text"><a href="/products/category/all/page-1/?order=newest&featured=1">MARKET</a></td>
-						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/articles/219437587-ACUERDO-DE-SERVICIOS-AM">Términos de servicio</a></td>
+						    <td class="am-Footer-item-text"><a href="#">Términos de servicio</a></td>
 						  </tr>
 						  <tr>
 						    <td class="am-Footer-title-text"><a href="/users/specialty/all/page-1/?order=newest&featured=1">ARTISTAS</a></td>
-						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/articles/219407927-PRIVACIDAD-Y-CONFIDENCIALIDAD">Políticas de privacidad</a></td>
+						    <td class="am-Footer-item-text"><a href="#">Políticas de privacidad</a></td>
 						  </tr>
 						  <tr>
 						    <td class="am-Footer-title-text"><a href="/collections/category/all/page-1?order=newest&featured=1">COLECCIÓN</a></td>
-						    <td class="am-Footer-item-text"><a href="https://artemanifiesto.zendesk.com/hc/es/sections/207497327-COMO-COMPRAR-">Cómo comprar</a></td>
+						    <td class="am-Footer-item-text"><a href="/blog/post/cmo-comprar-en-arte-manifiesto-70317052328">Cómo comprar</a></td>
 						  </tr>
 						  <tr>
-						    <td class="am-Footer-title-text" style="padding-bottom: 0;"><a href="https://artemanifiesto.zendesk.com/hc/es">AYUDA</a></td>
-						    <a href="https://artemanifiesto.zendesk.com/hc/es/sections/204234628-ACUERDOS-CON-ARTISTA"><td class="am-Footer-item-text" style="padding-bottom: 0;"><a href="https://artemanifiesto.zendesk.com/hc/es/sections/204234628-ACUERDOS-CON-ARTISTA">Cómo vender</a></td>
+						    <td class="am-Footer-title-text" style="padding-bottom: 0;"><a href="#">AYUDA</a></td>
+						    <td class="am-Footer-item-text" style="padding-bottom: 0;"><a href="/blog/post/cmo-crear-tu-tienda-de-productos-personalizados-en-arte-manifiesto-200317053620">Cómo vender</a></td>
 						  </tr>
 						</table>
 					</div>
