--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -195,10 +195,6 @@ src="https://www.facebook.com/tr?id=1546995582278131&ev=PageView&noscript=1"
 			{% endif %}
 				<tr>
 					<td></td>
-					<td><a href="/products/category/all/page-1/?order=newest&featured=1">MARKET</a></td>
-				</tr>
-				<tr>
-					<td></td>
 					<td><a href="/works/category/all/page-1/?order=newest&featured=1">OBRAS</a></td>
 				</tr>
 				<tr>
@@ -207,15 +203,19 @@ src="https://www.facebook.com/tr?id=1546995582278131&ev=PageView&noscript=1"
 				</tr>
 				<tr>
 					<td></td>
+					<td><a href="/products/category/all/page-1/?order=popularity&featured=1">MARKET</a></td>
+				</tr>
+				<!-- <tr>
+					<td></td>
 					<td><a href="/collections/category/all/page-1">COLECCIONES</a></td>
+				</tr> -->
+				<tr>
+					<td></td>
+					<td><a href="/blog">AM_BLOG</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="/blog">BLOG</a></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td><a href="/tv">TV</a></td>
+					<td><a href="/tv">AM_TV</a></td>
 				</tr>
 			{% if user %}
 				<tr>
