change default sorting for market

--- a/app/views/pages/featured.html
+++ b/app/views/pages/featured.html
@@ -8,7 +8,7 @@
 			<div class="featured-flex">
 				<div class="featured-c580">
 					<div class="featured-w580">
-						<a href="/products/category/all/page-1/?order=popularity&featured=1">
+						<a href="/products/category/all/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/am-market.jpg">
 						</a>
 					</div>
@@ -29,24 +29,24 @@
 			<div class="featured-flex">
 				<div class="featured-c580">
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/iphone-case/page-1/?order=popularity&featured=1">
+						<a href="/products/category/iphone-case/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/iphone.jpg">
 						</a>
 					</div>
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/ropa/page-1/?order=popularity&featured=1">
+						<a href="/products/category/ropa/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/polos.jpg">
 						</a>
 					</div>
 				</div>
 				<div class="featured-c580">
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/tazas/page-1/?order=popularity&featured=1">
+						<a href="/products/category/tazas/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/tazas.jpg">
 						</a>
 					</div>
 					<div class="featured-w280 featured-border">
-						<a href="/products/category/prints/page-1/?order=popularity&featured=1">
+						<a href="/products/category/prints/page-1/?order=newest&featured=1">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/f_auto,q_auto/v1482255850/featured/print.jpg">
 						</a>
 					</div>
