--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -20,7 +20,7 @@
 				              {% endif %}
 				              	<a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a>
 								<a href="/users/specialty/all/page-1/?order=newest&featured=1" class="users-menu">ARTISTAS<span></span></a>
-				              	<a href="/products/category/all/page-1/?order=popularity&featured=1" class="collections-menu">MARKET<sup> NEW</sup><span></span></a>
+				              	<a href="/products/category/all/page-1/?order=newest&featured=1" class="collections-menu">MARKET<sup> NEW</sup><span></span></a>
         						<a href="/blog" class="blog-menu">AM_BLOG<span></span></a>
         						<a href="/tv" class="tv-menu">AM_TV<span></span></a>
 							</ul>
