--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -203,7 +203,7 @@ src="https://www.facebook.com/tr?id=1546995582278131&ev=PageView&noscript=1"
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="/products/category/all/page-1/?order=popularity&featured=1">MARKET</a></td>
+					<td><a href="/products/category/all/page-1/?order=newest&featured=1">MARKET</a></td>
 				</tr>
 				<!-- <tr>
 					<td></td>
